--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,15 +12,15 @@
                 <div class="hero-features">
                     <div class="feature-item">
                         <div class="feature-icon">🎵</div>
-                        <span>Review Songs & Albums</span>
+                        <span>Review songs and albums</span>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">🌟</div>
-                        <span>Discover New Music</span>
+                        <span>Discover new music</span>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon">👥</div>
-                        <span>Connect with Music Lovers</span>
+                        <span>Conect with music lovers</span>
                     </div>
                 </div>
                 <div class="hero-actions">
